style: label fix contrast

--- a/styles/filtered-temples.css
+++ b/styles/filtered-temples.css
@@ -111,8 +111,8 @@ main h2 {
 }
 .grid .label {
     color: var(--label-text);
-    font-weight: 100;
-    padding-left: 3px;
+    font-weight: 200;
+    padding-left: 5px;
 }
 .grid section {
     border: 1px solid;
